--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <p class="testimonial-text">"Great pricing, efficient logistics solutions, and outstanding service quality. Highly recommended for businesses of all sizes!"</p>
                 <div class="testimonial-rating">⭐⭐⭐⭐⭐</div>
         </div>
-        
+        </div>
     </section>
 
     <!-- Contact Section -->
