--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftLogistics - Transportation Solutions</title>
     <link rel="stylesheet" href="./sin.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -23,6 +24,16 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#gallery">Gallery</a></li>
             </ul>
+            <div style="display: flex; display: none; flex-direction: column;" class="lines">
+                <i style="  padding-right: 8vw; position: relative;" class="fa-solid fa-grip-lines"></i>
+                   <ul class="links">
+                <li ><a style="color: #111; font-weight: 600; text-decoration: none;" href="#home">Home</a></li>
+                <li ><a style="color: #111; font-weight: 600; text-decoration: none;" href="#about">About</a></li>
+                <li ><a style="color: #111; font-weight: 600; text-decoration: none;" href="#services">Services</a></li>
+                <li ><a style="color: #111; font-weight: 600; text-decoration: none;" href="#gallery">Gallery</a></li>
+            </ul>
+            </div>
+           
         </div>
     </nav>
      <div class="slider-section" id="home">
